Adding more meaningful names to the methods and adding more effective logs