@@ -6,8 +6,6 @@ import org.aleajactarest.assembly.DiceRollResultAssembly;
 import org.aleajactarest.beans.DiceCupRollResult;
 import org.aleajactarest.beans.DiceRollResult;
 import org.aleajactarest.beans.ParsedDice;
-import org.aleajactarest.engine.Dice;
-import org.aleajactarest.operation.Operation;
 import org.aleajactarest.parser.DiceNotationParser;
 import org.aleajactarest.parser.exceptions.DiceParseException;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -19,26 +17,23 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 @CrossOrigin
 @RestController
 @RequestMapping(value = "/api/dices/cup")
-public class DiceCupResource {
+public class DiceCupResource implements RollResources {
 
     final DiceNotationParser parser;
 
     final DiceRollResultAssembly assembly;
 
     @GetMapping("/{dicelist}")
-    public DiceCupRollResult roll(@PathVariable("dicelist") String dicelist) {
+    public DiceCupRollResult diceCupRoll(@PathVariable("dicelist") String dicelist) {
         List<String> dices = Arrays.asList(dicelist.split(","));
 
-        log.info("Will roll: ");
-
-        dices.forEach(dice -> log.info("\t - {}", dice));
+        log.info("diceCupRoll: diceList {}", dicelist);
 
         List<ParsedDice> parsedDices = new ArrayList<>();
 
@@ -46,11 +41,15 @@ public class DiceCupResource {
             try {
                 parsedDices.add(parser.evaluate(dice));
             } catch (DiceParseException e) {
-                e.printStackTrace();
+                log.error("Error parsing dice", e);
             }
         });
 
-        List<DiceRollResult> results = parsedDices.stream().map(this::roll).collect(Collectors.toList());
+        List<DiceRollResult> results = parsedDices
+            .stream()
+            .map(parsedDice -> getDiceRollResult(parsedDice, assembly))
+            .toList();
+
         int sum = results.stream().mapToInt(DiceRollResult::getResult).sum();
 
         DiceCupRollResult diceCupRollResult = new DiceCupRollResult();
@@ -59,15 +58,5 @@ public class DiceCupResource {
         diceCupRollResult.setMasterResult(sum);
 
         return diceCupRollResult;
-    }
-
-    private DiceRollResult roll(ParsedDice parsedDice) {
-        Dice myDice = Dice.getDiceBySymbol(parsedDice.getDice());
-
-        int[] partials = myDice.multipleRoll(parsedDice.getAmount());
-
-        int result = Operation.getOperationBySymbol(parsedDice.getOperator()).compute(Arrays.stream(partials).parallel().sum(), parsedDice.getModifier());
-
-        return assembly.modifierResult(myDice, result, parsedDice.getOperator(), parsedDice.getModifier(), partials);
     }
 }
